# Local-Chromatin-Fiber-Folding-Represses-Transcription-and-Loop-Extrusion-in-Quiescent-Cells

./: CMakeLists.txt  README.md
Chromatin_Modeling/: Clustering_DBSCAN.m  Sedimentation_Packing.m  load_MC.m  radius_gyration_volume.m
Chromatin_Modeling/Tails-Interactions/: tail_interactions_LHref.cpp  tail_interactions_debug.h
scripts/: bz2Fastq.nf  compactScore.py  contactDecay.nf  contactDecay.py  contactOddRatio.nf  contactOddRatio.py  contactRatio.nf  cool2coo.py  diffContactHeatmap.nf  distTSS2LCID.nf  distTSS2LCID.py  groupContacts.py  hic2cool.nf  hicrep.nf  hicrep.py  mcool2coo.py  mergeFastqGZ.nf  mergeMicroCReplica.nf  np2np1ratio.nf  np2np1ratio.py  pileupContacts.nf  pileupContacts.py  plotHeatmap.py  processSample.nf  refilter.nf  requirements.txt  selectBins.py  sortChIP.py  totalContacts.py  utils.nf  utils.py  workflows.nf
src/: count_interactions_over.cpp  dist_decay.cpp  filter_and_sort_pairs.cpp  filter_pairs_region.cpp  make_matrix.cpp  make_matrix_single.cpp  select_closest_pairs.cpp
